--- a/products.html
+++ b/products.html
@@ -5,180 +5,40 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body {
-  font-family: Tahoma, sans-serif;
-  margin: 0;
-  background: #f9f9f9;
-}
-
+body { font-family: Tahoma, sans-serif; margin: 0; background: #f9f9f9; }
 /* الهيدر */
-header {
-  background: #131921;
-  color: white;
-  padding: 15px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
+header { background: #131921; color: white; padding: 15px; text-align: center; font-size: 20px; font-weight: bold; position: sticky; top: 0; z-index: 1000; }
 .header-buttons { margin-top: 10px; }
-.header-buttons button {
-  position: relative;
-  background: #ffd814;
-  border: 1px solid #fcd200;
-  padding: 6px 12px;
-  margin: 0 5px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: bold;
-}
+.header-buttons button { position: relative; background: #ffd814; border: 1px solid #fcd200; padding: 6px 12px; margin: 0 5px; border-radius: 6px; cursor: pointer; font-weight: bold; }
 .header-buttons button:hover { background: #f7ca00; }
-
 /* عداد السلة */
-#cart-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: red;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
+#cart-count { position: absolute; top: -8px; right: -8px; background: red; color: #fff; font-size: 12px; font-weight: bold; padding: 2px 6px; border-radius: 50%; display: none; }
 /* مربع البحث */
-#searchBox {
-  display: block;
-  margin: 15px auto;
-  padding: 10px;
-  width: 90%;
-  max-width: 400px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-}
-
+#searchBox { display: block; margin: 15px auto; padding: 10px; width: 90%; max-width: 400px; border-radius: 8px; border: 1px solid #ccc; font-size: 16px; box-shadow: 0 1px 4px rgba(0,0,0,0.1); }
 /* المنتجات */
-#products-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  gap: 12px;
-  padding: 15px;
-}
-.product {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 10px;
-  text-align: center;
-  background: #fff;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  transition: 0.3s;
-}
+#products-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 12px; padding: 15px; }
+.product { border: 1px solid #ccc; border-radius: 10px; padding: 10px; text-align: center; background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); transition: 0.3s; }
 .product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-.product img {
-  width: 100%;
-  height: 120px;
-  object-fit: contain;
-  margin-bottom: 8px;
-}
+.product img { width: 100%; height: 120px; object-fit: contain; margin-bottom: 8px; }
 .name { font-size: 16px; margin: 5px 0; color: #333; }
 .price { font-weight: bold; margin-bottom: 5px; }
-.product input {
-  width: 50px;
-  margin: 5px 0;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  text-align: center;
-}
-.product button {
-  padding: 5px 10px;
-  border: none;
-  border-radius: 5px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
+.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
+.product button { padding: 5px 10px; border: none; border-radius: 5px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; transition: 0.3s; }
 .product button:hover { background: #6a1fbf; transform: scale(1.05); }
-
 /* نافذة اجمالي الفاتورة */
-#totalModal {
-  display: none;
-  position: fixed;
-  top: 50%; left: 50%;
-  transform: translate(-50%,-50%);
-  background: #fff;
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
-  text-align: center;
-  z-index: 1002;
-  width: 90%;
-  max-width: 400px;
-  max-height: 80%;
-  overflow-y: auto;
-}
-#totalModal h2 {
-  font-size: 20px;
-  margin-bottom: 15px;
-  color: #8a2be2;
-}
-#totalModal button {
-  margin: 5px;
-  padding: 8px 15px;
-  border: none;
-  border-radius: 10px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
+#totalModal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%,-50%); background: #fff; padding: 20px; border-radius: 15px; box-shadow: 0 3px 15px rgba(0,0,0,0.3); text-align: center; z-index: 1002; width: 90%; max-width: 400px; max-height: 80%; overflow-y: auto; }
+#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+#totalModal button { margin: 5px; padding: 8px 15px; border: none; border-radius: 10px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; transition: 0.3s; }
 #totalModal button:hover { background: #6a1fbf; }
-
 /* قائمة السلة */
 #cartList { text-align: right; margin-bottom: 10px; }
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-}
+.cart-item { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ccc; padding: 5px 0; }
 .cart-item span { margin: 0 5px; }
 .cart-item button { padding: 2px 8px; font-size: 14px; }
-
 /* الأرقام تحت بعض */
-#orderNumbers a {
-  display: block;
-  margin: 5px 0;
-  font-size: 16px;
-  color: #8a2be2;
-  font-weight: bold;
-  text-decoration: none;
-}
-#orderNumbers a:hover {
-  color: #6a1fbf;
-  text-decoration: underline;
-}
-
-#toast {
-  position: fixed;
-  bottom: 20px; right: 20px;
-  background: #25d366;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-  display: none;
-  z-index: 1003;
-}
+#orderNumbers a { display: block; margin: 5px 0; font-size: 16px; color: #8a2be2; font-weight: bold; text-decoration: none; }
+#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
+#toast { position: fixed; bottom: 20px; right: 20px; background: #25d366; color: #fff; padding: 10px 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.3); display: none; z-index: 1003; }
 </style>
 </head>
 <body>
@@ -193,9 +53,7 @@ header {
   </div>
 </header>
 
-<!-- مربع البحث -->
 <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
-
 <div id="products-container"></div>
 
 <div id="totalModal">
@@ -219,32 +77,7 @@ const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
 
-// =================== كلمة السر مع مدة صلاحية 15 دقيقة ===================
-function setPassword(pass){
-  const expire = new Date().getTime() + 15*60*1000;
-  localStorage.setItem("productsPass", JSON.stringify({pass, expire}));
-}
-
-// التحقق من كلمة السر عند فتح الصفحة
-(function checkPassValidity(){
-    const stored = JSON.parse(localStorage.getItem("productsPass"));
-    if(!stored || new Date().getTime() > stored.expire){
-        alert("انتهت صلاحية كلمة السر، يرجى إعادة إدخالها!");
-        window.location.href = "index.html";
-    }
-})();
-
-function checkPassword(input){
-  const stored = JSON.parse(localStorage.getItem("productsPass"));
-  if(stored && input === stored.pass){
-      return true;
-  } else {
-      alert("كلمة السر غير صحيحة، يرجى إدخال الباسورد الجديد!");
-      return false;
-  }
-}
-
-// =================== تحميل المنتجات ===================
+// عرض المنتجات
 function renderProducts(data){
     let html = "";
     for(let i=0;i<data.length;i++){
@@ -262,7 +95,7 @@ function renderProducts(data){
     container.innerHTML = html;
 }
 
-// تحميل المنتجات بسرعة
+// تحميل المنتجات
 (async function(){
    if(localStorage.getItem("products")){
       productsData = JSON.parse(localStorage.getItem("products"));
@@ -274,10 +107,12 @@ function renderProducts(data){
      productsData = data.reverse();
      localStorage.setItem("products", JSON.stringify(productsData));
      renderProducts(productsData);
-   } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
+   } catch(err){ 
+     console.log("❌ خطأ في جلب المنتجات:",err); 
+     container.innerHTML = "<p style='text-align:center;color:red'>❌ لا توجد منتجات للعرض</p>";
+   }
 })();
 
-// =================== إدارة السلة ===================
 function showToast(msg){
   const toast = document.getElementById("toast");
   toast.innerText = msg;
@@ -288,12 +123,8 @@ function showToast(msg){
 function updateCartCount(){
   const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
   const badge = document.getElementById("cart-count");
-  if(count>0){
-    badge.style.display = "inline-block";
-    badge.innerText = count;
-  } else {
-    badge.style.display = "none";
-  }
+  if(count>0){ badge.style.display = "inline-block"; badge.innerText = count; } 
+  else { badge.style.display = "none"; }
 }
 
 function addToCart(index){
@@ -301,12 +132,11 @@ function addToCart(index){
   const quantity = parseInt(input.value);
   if(quantity <=0) return;
   cart[index] = (cart[index] || 0) + quantity;
-  localStorage.setItem("cartData", JSON.stringify(cart)); // حفظ السلة
+  localStorage.setItem("cartData", JSON.stringify(cart));
   updateCartCount();
   showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
 }
 
-// إعادة تحميل السلة عند العودة
 (function loadCart(){
   const storedCart = JSON.parse(localStorage.getItem("cartData"));
   if(storedCart) { cart = storedCart; updateCartCount(); }
@@ -341,18 +171,12 @@ function updateQty(idx, value){
   updateCartCount();
   showTotal();
 }
-function removeItem(idx){
-  delete cart[idx];
-  localStorage.setItem("cartData", JSON.stringify(cart));
-  updateCartCount();
-  showTotal();
-}
+function removeItem(idx){ delete cart[idx]; localStorage.setItem("cartData", JSON.stringify(cart)); updateCartCount(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display = 'none'; }
 
 function sendOrder(){
   const orderDiv = document.getElementById("orderNumbers");
   orderDiv.style.display = "block";
-
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick = (e)=>{
       e.preventDefault();
@@ -372,7 +196,6 @@ function sendOrder(){
 function openSupport(){ window.open("https://wa.me/201022495795", "_blank"); }
 function goHome(){ window.location.href="index.html"; }
 
-// 🔍 البحث
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword = this.value.trim().toLowerCase();
   const filtered = productsData.filter(p => p.name.toLowerCase().includes(keyword));
