--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@ body { font-family: Tahoma; margin:0; padding:0; background:#f9f9f9; text-align:
 header { background:#8a2be2; color:#fff; padding:25px 10px; }
 header h1 { margin:0; font-size:2.2em; font-weight:bold; }
 header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
-
 .top-images { display:flex; justify-content:center; gap:10px; margin:15px 0; }
 .top-images img { width:120px; height:auto; border-radius:10px; }
-
 .top-buttons { display:flex; flex-wrap:wrap; justify-content:center; margin:15px 0; gap:10px; }
 .top-buttons button { padding:12px 18px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; transition:0.3s; }
 .top-buttons button:hover { background:#6a1fbf; transform:scale(1.05); }
-
 .telegram-fixed-btn {
     position: fixed;
     bottom: 20px;
@@ -34,23 +31,18 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
     transition: 0.3s;
 }
 .telegram-fixed-btn:hover { background: #009acd; transform: scale(1.05); }
-
 .info-box { display:none; background:#fff; margin:15px auto; padding:20px; border-radius:12px; max-width:400px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.2); }
-
 .form-container { max-width:400px; margin:20px auto; background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
 .form-container h3 { text-align:center; color:#8a2be2; margin-bottom:15px; }
 .form-container input, .form-container select { width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em; }
 .form-container button { width:100%; padding:12px; border:none; border-radius:10px; font-size:1.1em; font-weight:bold; cursor:pointer; color:#fff; background:#8a2be2; transition:0.3s; }
 .form-container button:hover { background:#6a1fbf; transform:scale(1.02); }
-
 .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
 .modal-content { background:#fff; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
 .modal-content h2 { color:#8a2be2; margin-bottom:15px; }
-
 .password-box { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#00bfff; padding:25px; border-radius:50px; max-width:400px; width:90%; box-shadow:0 2px 15px rgba(0,0,0,0.3); text-align:center; z-index:1001; font-weight:bold; color:#fff; }
 .password-box input { width:70%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc; }
 .password-box button { padding:10px 15px; margin:5px; border:none; border-radius:8px; background:#fff; color:#00bfff; cursor:pointer; font-weight:bold; }
-
 .support-btn { position:fixed; top:10px; left:10px; padding:10px 15px; border-radius:50%; background:#ff5722; color:#fff; font-weight:bold; cursor:pointer; box-shadow:0 2px 5px rgba(0,0,0,0.3); transition:0.3s; }
 .support-btn:hover { background:#e64a19; transform:scale(1.1); }
 </style>
@@ -141,18 +133,30 @@ const passwordBox = document.getElementById('passwordBox');
 const submitBtn = document.getElementById("submitBtn");
 const successModal = document.getElementById("successModal");
 
-// كلمة السر الافتراضية والمدة
+// كلمة السر الافتراضية
 let defaultPass = "010024"; 
-let currentPass = localStorage.getItem("productsPass") || defaultPass;
-let passExpiry = localStorage.getItem("productsPassExpiry") || 0;
+let currentPass = localStorage.getItem("productsPass");
+let passExpiry = localStorage.getItem("productsPassExpiry");
+
+// ضبط القيمة الافتراضية عند أول استخدام
+if(!currentPass){
+    currentPass = defaultPass;
+    localStorage.setItem("productsPass", currentPass);
+}
+if(!passExpiry){
+    passExpiry = Date.now() + 15*60*1000; // 15 دقيقة
+    localStorage.setItem("productsPassExpiry", passExpiry);
+} else {
+    passExpiry = Number(passExpiry);
+}
 
 // تحقق كلمة السر
 function checkPassword() {
     const pass = document.getElementById('offerPass').value;
     const now = Date.now();
     if(now > passExpiry){ 
-        currentPass = defaultPass; 
-        localStorage.setItem("productsPass", defaultPass); 
+        alert("❌ انتهت صلاحية كلمة السر، يرجى الحصول على كلمة جديدة من المندوب");
+        return;
     }
     if(pass === currentPass){
         window.open('products.html', '_blank');
@@ -167,14 +171,12 @@ function closeAdminPassBox(){ document.getElementById('adminPassBox').style.disp
 function changeProductsPass(){
     const adminPass = document.getElementById('adminPass').value;
     const newPass = document.getElementById('newProductsPass').value;
-    const correctAdminPass = "777"; // كلمة السر الخاصة بك
+    const correctAdminPass = "777"; 
     if(adminPass === correctAdminPass && newPass){
-        // حفظ كلمة السر الجديدة مع مدة 15 دقيقة
         currentPass = newPass;
         localStorage.setItem("productsPass", newPass);
         localStorage.setItem("productsPassExpiry", Date.now() + 15*60*1000);
         alert("✅ تم تغيير كلمة السر بنجاح! اعطِ الرقم الجديد للعميل.");
-        // إخراج العملاء الحاليين
         window.location.reload();
         document.getElementById('adminPass').value='';
         document.getElementById('newProductsPass').value='';
@@ -211,7 +213,6 @@ submitBtn.addEventListener("click", (e)=>{
   document.getElementById("phone").value='';
   document.getElementById("address").value='';
   document.getElementById("field").value='';
-  // إرسال البيانات (اختياري)
 });
 
 function closeModal(){ successModal.style.display='none'; }
