--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 </div>
 
 <div id="adminPassBox" class="password-box">
-<h2>ادخل كلمة السر الخاصة لتغيير كلمة سر المنتجات 🔑</h2>
+<h2>ادخل كلمة السر الخاصة لتغيير كلمة سر البرنامج 🔑</h2>
 <input type="password" id="adminPass" placeholder="كلمة السر الخاصة">
 <input type="text" id="newProductsPass" placeholder="كلمة السر الجديدة">
 <button onclick="changeProductsPass()">تغيير</button>
@@ -133,7 +133,7 @@ const passwordBox = document.getElementById('passwordBox');
 const submitBtn = document.getElementById("submitBtn");
 const successModal = document.getElementById("successModal");
 
-// كلمة السر الافتراضية
+// كلمة السر الافتراضية للبرنامج
 let defaultPass = "010024"; 
 let currentPass = localStorage.getItem("productsPass");
 let passExpiry = localStorage.getItem("productsPassExpiry");
@@ -150,34 +150,46 @@ if(!passExpiry){
     passExpiry = Number(passExpiry);
 }
 
-// تحقق كلمة السر
+// تحقق كلمة السر عند الدخول للمنتجات
 function checkPassword() {
     const pass = document.getElementById('offerPass').value;
     const now = Date.now();
+    
     if(now > passExpiry){ 
         alert("❌ انتهت صلاحية كلمة السر، يرجى الحصول على كلمة جديدة من المندوب");
         return;
     }
+
     if(pass === currentPass){
+        // تحديث الصلاحية تلقائي عند الدخول الصحيح
+        localStorage.setItem("productsPassExpiry", Date.now() + 15*60*1000);
         window.open('products.html', '_blank');
     } else {
         alert("❌ كلمة السر غير صحيحة");
     }
 }
 
-// تغيير كلمة السر للمنتجات
-function showAdminPassBox(){ document.getElementById('adminPassBox').style.display='block'; }
-function closeAdminPassBox(){ document.getElementById('adminPassBox').style.display='none'; }
+// زرار الخاص لتغيير كلمة السر
+function showAdminPassBox(){ 
+    document.getElementById('adminPassBox').style.display='block'; 
+}
+function closeAdminPassBox(){ 
+    document.getElementById('adminPassBox').style.display='none'; 
+}
+
 function changeProductsPass(){
     const adminPass = document.getElementById('adminPass').value;
     const newPass = document.getElementById('newProductsPass').value;
-    const correctAdminPass = "777"; 
+    const correctAdminPass = "777"; // كلمة السر للتحكم بالبرنامج
+
     if(adminPass === correctAdminPass && newPass){
+        // حفظ كلمة السر الجديدة في localStorage للبرنامج نفسه
         currentPass = newPass;
         localStorage.setItem("productsPass", newPass);
-        localStorage.setItem("productsPassExpiry", Date.now() + 15*60*1000);
-        alert("✅ تم تغيير كلمة السر بنجاح! اعطِ الرقم الجديد للعميل.");
-        window.location.reload();
+        localStorage.setItem("productsPassExpiry", Date.now() + 15*60*1000); // مدة الصلاحية 15 دقيقة
+        alert("✅ تم تغيير كلمة السر للبرنامج بنجاح! المستخدمين الحاليين سيحتاجون الرقم الجديد.");
+        
+        // تنظيف الحقول
         document.getElementById('adminPass').value='';
         document.getElementById('newProductsPass').value='';
         closeAdminPassBox();
