--- a/products.html
+++ b/products.html
@@ -8,11 +8,28 @@
 body { font-family: Tahoma, sans-serif; margin: 0; background: #f9f9f9; }
 /* الهيدر */
 header { background: #131921; color: white; padding: 15px; text-align: center; font-size: 20px; font-weight: bold; position: sticky; top: 0; z-index: 1000; }
-.header-buttons { margin-top: 10px; }
-.header-buttons button { position: relative; background: #ffd814; border: 1px solid #fcd200; padding: 6px 12px; margin: 0 5px; border-radius: 6px; cursor: pointer; font-weight: bold; }
+.header-buttons {
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* توسيط الأزرار */
+  gap: 8px; /* مسافة بين الأزرار مناسبة للموبايل */
+}
+.header-buttons button {
+  position: relative;
+  background: #ffd814;
+  border: 1px solid #fcd200;
+  padding: 8px 10px; /* حجم مناسب للموبايل */
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 14px;
+  min-width: 90px; /* عرض أدنى */
+  box-sizing: border-box;
+}
 .header-buttons button:hover { background: #f7ca00; }
 /* عداد السلة */
-#cart-count { position: absolute; top: -8px; right: -8px; background: red; color: #fff; font-size: 12px; font-weight: bold; padding: 2px 6px; border-radius: 50%; display: none; }
+#cart-count { position: absolute; top: -6px; right: -6px; background: red; color: #fff; font-size: 11px; font-weight: bold; padding: 2px 5px; border-radius: 50%; display: none; }
 /* مربع البحث */
 #searchBox { display: block; margin: 15px auto; padding: 10px; width: 90%; max-width: 400px; border-radius: 8px; border: 1px solid #ccc; font-size: 16px; box-shadow: 0 1px 4px rgba(0,0,0,0.1); }
 /* المنتجات */
@@ -39,6 +56,12 @@ header { background: #131921; color: white; padding: 15px; text-align: center; f
 #orderNumbers a { display: block; margin: 5px 0; font-size: 16px; color: #8a2be2; font-weight: bold; text-decoration: none; }
 #orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
 #toast { position: fixed; bottom: 20px; right: 20px; background: #25d366; color: #fff; padding: 10px 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.3); display: none; z-index: 1003; }
+/* responsive adjustments */
+@media (max-width: 500px){
+  .header-buttons button { font-size: 13px; padding: 6px 8px; min-width: 80px; }
+  #searchBox { font-size: 14px; padding: 8px; }
+  .product input { width: 40px; }
+}
 </style>
 </head>
 <body>
