--- a/products.html
+++ b/products.html
@@ -12,19 +12,19 @@ header { background: #131921; color: white; padding: 15px; text-align: center; f
   margin-top: 10px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 8px;
+  justify-content: center; /* توسيط الأزرار */
+  gap: 8px; /* مسافة بين الأزرار مناسبة للموبايل */
 }
 .header-buttons button {
   position: relative;
   background: #ffd814;
   border: 1px solid #fcd200;
-  padding: 8px 10px;
+  padding: 8px 10px; /* حجم مناسب للموبايل */
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
-  min-width: 90px;
+  min-width: 90px; /* عرض أدنى */
   box-sizing: border-box;
 }
 .header-buttons button:hover { background: #f7ca00; }
@@ -95,18 +95,6 @@ header { background: #131921; color: white; padding: 15px; text-align: center; f
 <div id="toast">تمت الإضافة إلى السلة</div>
 
 <script defer>
-/* ===== كلمة السر الثابتة والتحقق ===== */
-const PASSWORD = "010024"; 
-(function checkPassword(){
-    const storedPass = localStorage.getItem("secretPass");
-    if(storedPass !== PASSWORD){
-        localStorage.clear(); // مسح كل بيانات السلة والمنتجات
-        alert("❌ تم تعديل كلمة السر، سيتم تسجيل خروج الكل");
-        window.location.href = "logout.html"; // إعادة التوجيه لصفحة تسجيل الخروج
-    }
-})();
-
-/* ===== الكود الأساسي للمنتجات والسلة ===== */
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
@@ -118,6 +106,9 @@ const categoriesOrder = ["الصابات","الكابلات","السماعات",
 // عرض المنتجات مع ترتيب الأقسام
 function renderProducts(data){
     let html = "";
+    const displayed = new Set();
+
+    // الأقسام المحددة
     categoriesOrder.forEach(cat=>{
         const items = data.filter(p=>p.category === cat);
         if(items.length){
@@ -131,9 +122,12 @@ function renderProducts(data){
                     <input type="number" min="1" value="1" data-index="${data.indexOf(item)}">
                     <button onclick="addToCart(${data.indexOf(item)})">أضف إلى السلة</button>
                 </div>`;
+                displayed.add(item);
             });
         }
     });
+
+    // المنتجات غير المصنفة
     const otherItems = data.filter(p=>!categoriesOrder.includes(p.category));
     if(otherItems.length){
         html += `<h3 style="margin:10px 0; color:#8a2be2;">أخرى</h3>`;
@@ -148,6 +142,7 @@ function renderProducts(data){
             </div>`;
         });
     }
+
     container.innerHTML = html;
 }
 
